Add maps metadata api
